--- a/ozgecmis.html
+++ b/ozgecmis.html
@@ -54,24 +54,68 @@
   <!-- Navbar end -->
   <main>
     <article>
-      <h1>Lorem, ipsum.</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempore facilis quod cumque nesciunt? Enim incidunt placeat nemo, soluta fuga facilis quod ipsam quae minima vitae saepe quisquam provident animi?
-      </p>
-      <section>
-        <h2>Yetenekler ve Teknolojiler</h2>
+      <section class="pt-3">
+        <h2>Özgeçmiş</h1>
+        <ul class="list-group list-group-flush">
+         <li class="list-group-item">
+           <strong>Tam Ad:</strong>
+           <span>İsmail Mete Uçar<area shape="rect" coords="" href="" alt=""></span>
+         </li>
+         <li class="list-group-item">
+           <strong>DOĞUM TARİHİ:</strong>
+           <span>9 Haziran 2001</span>
+         </li >
+         <li class="list-group-item">
+           <strong>Meslek:</strong>
+           <span>Bilgisayar Mühendisliği Öğrencisi</span>
+         </li>
+ 
+         <li class="list-group-item">
+           <strong>Email:</strong>
+           <span>i.meteucar@gmail.com</span>
+         </li>
+       </ul>
+      </section>
+      <section >
+        <h2>Yetenekler</h2>
         <figure>
           <img src="img/skillsandtech.jpg" alt="Skills">
-          <figcaption>Yetenekler ve Teknolojiler</figcaption>
         </figure>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius perspiciatis modi velit dolores non tenetur dolore esse, debitis, aut magni vero quidem voluptates nesciunt quos hic molestiae laudantium. Necessitatibus, possimus.</p>
       </section>
-      <section>
-        <h2>Eğitim</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis aperiam eos nobis maiores rem? Maxime tempore quibusdam illum qui. Sed sapiente tenetur at dolores veniam praesentium sunt vel eum cupiditate.</p>
+        <div class="tab-full">
+          <section class="education" id="education">
+            <h2>Eğitim</h2>
+            <div class="box-container">
+              <div class="box">
+                <i class="fas fa-graduation-cap"></i>
+                <span>2006 - 2010</span>
+                <h3>Aydın Güzelhisar İlkokulu</h3>
+              </div>
+  
+              <div class="box">
+                <i class="fas fa-graduation-cap"></i>
+                <span>2010 - 2014</span>
+                <h3>Aydın Hacı Lütfiye Atay Ortaokulu</h3>
+              </div>
+  
+              <div class="box">
+                <i class="fas fa-graduation-cap"></i>
+                <span>2014 - 2018</span>
+                <h3>Aydın Atatürk Anadolu Lisesi</h3>
+              </div>
+  
+              <div class="box">
+                <i class="fas fa-graduation-cap"></i>
+                <span>2020 - </span>
+                <h3>Sakarya Üniversitesi Bilgisayar Mühendisliği</h3>
+              </div>
+            </div>
+          </section>
+        </div>
 
-      </section>
       <section>
-        <h2>Eğitim</h2>
+        <h2>Katıldığım Topluluklar</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis aperiam eos nobis maiores rem? Maxime tempore quibusdam illum qui. Sed sapiente tenetur at dolores veniam praesentium sunt vel eum cupiditate.</p>
         
       </section>
@@ -87,9 +131,9 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dicta ratione, cum dignissimos adipisci, corrupti asperiores, dolore hic eum doloribus sapiente exercitationem officiis enim facere totam architecto. Quaerat, neque dicta?</p> 
       </aside>
       <div class="col-md-6 tab-full">
-        <section>
-          <h1>Programlama Becerileri</h1>
-          <br />
+        <section >
+          <h2 style="margin-left: 22px;">Programlama Becerileri</h2>
+          
           <ul class="skill-bars">
             <li>
               <div class="progress percent60"><span>60%</span></div>
@@ -115,37 +159,6 @@
         </section>
       </div>
 
-      <div class="col-md-6 tab-full">
-        <section class="education" id="education">
-          <h1>Eğitim</h1>
-
-          <div class="box-container">
-            <div class="box">
-              <i class="fas fa-graduation-cap"></i>
-              <span>2006 - 2010</span>
-              <h3>Zeynep Bedia Kılıçlıoğlu İlkokulu</h3>
-            </div>
-
-            <div class="box">
-              <i class="fas fa-graduation-cap"></i>
-              <span>2010 - 2014</span>
-              <h3>Zeynep Bedia Kılıçlıoğlu Ortaokulu</h3>
-            </div>
-
-            <div class="box">
-              <i class="fas fa-graduation-cap"></i>
-              <span>2014 - 2018</span>
-              <h3>Dr. Kemal Naci Ekşi Anadolu Lisesi</h3>
-            </div>
-
-            <div class="box">
-              <i class="fas fa-graduation-cap"></i>
-              <span>2019 - </span>
-              <h3>Sakarya Üniversitesi Bilgisayar Mühendisliği</h3>
-            </div>
-          </div>
-        </section>
-      </div>
 
   </main>
 
