--- a/sehrim.html
+++ b/sehrim.html
@@ -51,6 +51,56 @@
     </nav>
   </header>
   <!-- Navbar end -->
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/aydin.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption">
+          <h5 class="animated bounceInRight" style="animation-delay:1s">First slide label</h5>
+          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay:2s">Some representative placeholder content for the first slide.</p>
+          <p class="animated bounceInRight" style="animation-delay:3s"><a href="#">Learn More</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/aydinkentmeydani.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-caption">
+          <h5 class="animated bounceInRight" style="animation-delay:1s">First slide label</h5>
+          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay:2s">Some representative placeholder content for the first slide.</p>
+          <p class="animated bounceInRight" style="animation-delay:3s"><a href="#">Learn More</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/didim.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption">
+          <h5 class="animated bounceInRight" style="animation-delay:1s">First slide label</h5>
+          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay:2s">Some representative placeholder content for the first slide.</p>
+          <p class="animated bounceInRight" style="animation-delay:3s"><a href="#">Learn More</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/kuşadasijpg.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption">
+          <h5 class="animated bounceInRight" style="animation-delay:1s">First slide label</h5>
+          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay:2s">Some representative placeholder content for the first slide.</p>
+          <p class="animated bounceInRight" style="animation-delay:3s"><a href="#">Learn More</a></p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
   <!-- back to top -->
   <button
@@ -140,6 +190,7 @@
 </div>
 </footer>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
