sehrim ve mirasimiz sayfasi tamamlandi

--- a/ozgecmis.html
+++ b/ozgecmis.html
@@ -17,20 +17,19 @@
 <body>
   <header>
     <!-- Navbar start -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light ">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a style="margin-right: 200px;" class="navbar-brand mx-5 " href="index.html">Ana Sayfa</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="index.html"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="container collapse navbar-collapse  " id="navbarSupportedContent" aria-expanded="false">
+        <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
             <li class="nav-item ">
-              <a class="nav-link active " aria-current="page" href="ozgecmis.html">Özgeçmiş</a>
+              <a class="nav-link " aria-current="page" href="ozgecmis.html">Özgeçmiş</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="ilgi-alanlari.html">İlgi Alanları</a>
+              <a class="nav-link  active" href="ilgi-alanlari.html">İlgi Alanları</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="sehrim.html">Şehrim</a>
@@ -42,11 +41,6 @@
                <a class="nav-link" href="iletisim.html">İletişim</a>
             </li>
           </ul>
-          <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-          </div>
         </div>
       </div>
     </nav>
