--- a/sehrim.html
+++ b/sehrim.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="Css/sehrim.css">
   <link rel="stylesheet" href="Css/index.css">
   <link rel="stylesheet" href="Fontawesome/fontawesome/all.css">
   <title>Ana Sayfa</title>
@@ -16,23 +18,22 @@
 <body>
   <header>
     <!-- Navbar start -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light ">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark ">
       <div class="container-fluid">
-        <a style="margin-right: 200px;" class="navbar-brand mx-5 " href="index.html">Ana Sayfa</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="index.html"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="container collapse navbar-collapse  " id="navbarSupportedContent" aria-expanded="false">
+        <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
             <li class="nav-item ">
-              <a class="nav-link active " aria-current="page" href="ozgecmis.html">Özgeçmiş</a>
+              <a class="nav-link " aria-current="page" href="ozgecmis.html">Özgeçmiş</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="ilgi-alanlari.html">İlgi Alanları</a>
+              <a class="nav-link  " href="ilgi-alanlari.html">İlgi Alanları</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="sehrim.html">Şehrim</a>
+              <a class="nav-link active" href="sehrim.html">Şehrim</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="mirasimiz.html">Mirasımız</a>
@@ -41,11 +42,6 @@
                <a class="nav-link" href="iletisim.html">İletişim</a>
             </li>
           </ul>
-          <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-          </div>
         </div>
       </div>
     </nav>
@@ -60,35 +56,35 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/aydin.jpg" class="d-block w-100" alt="...">
+        <a href="#aydin-head"><img src="img/aydinkentmeydani.jpeg" class="d-block w-100" alt="..."></a>
         <div class="carousel-caption">
-          <h5 class="animated bounceInRight" style="animation-delay:1s">First slide label</h5>
-          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay:2s">Some representative placeholder content for the first slide.</p>
-          <p class="animated bounceInRight" style="animation-delay:3s"><a href="#">Learn More</a></p>
+          <h5 class="animated bounceInRight" style="animation-delay:1s">Aydın</h5>
+          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay:2s">Türkiye’nin batısında yer alan illerimizden birisi olan Aydın ili, ülkemizin Ege Bölgesinde yer almaktadır.</p>
+          <p class="animated bounceInRight" style="animation-delay:3s"><a href="#aydin-head">Daha fazlası</a></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/aydinkentmeydani.jpeg" class="d-block w-100" alt="...">
+        <a href="#aydin-tarih"><img src="img/aydinTarihce.jpeg" class="d-block w-100" alt="..."> </a>
         <div class="carousel-caption">
-          <h5 class="animated bounceInRight" style="animation-delay:1s">First slide label</h5>
-          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay:2s">Some representative placeholder content for the first slide.</p>
-          <p class="animated bounceInRight" style="animation-delay:3s"><a href="#">Learn More</a></p>
+          <h5 class="animated bounceInRight" style="animation-delay:1s">Aydın Tarihi</h5>
+          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay:2s">Hititlerden başka Spartalılar ve Perslere de ev sahipliği de yapmıştır. Ardından Büyük İskender hakimiyeti altına girmiştir. Roma İmparatorluğuna da ev sahipliği yapan Aydın tarih boyunca birçok isimle anılmıştır.</p>
+          <p class="animated bounceInRight" style="animation-delay:3s"><a href="#aydin-tarih">Daha fazlası</a></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/didim.jpg" class="d-block w-100" alt="...">
+        <a href="#aydin-yemek"><img src="img/aydinincir.jpg" class="d-block w-100" alt="..."> </a>
         <div class="carousel-caption">
-          <h5 class="animated bounceInRight" style="animation-delay:1s">First slide label</h5>
-          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay:2s">Some representative placeholder content for the first slide.</p>
-          <p class="animated bounceInRight" style="animation-delay:3s"><a href="#">Learn More</a></p>
+          <h5 class="animated bounceInRight" style="animation-delay:1s">Aydın’da Ne Yenir ? </h5>
+          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay:2s">Köklü tarihi, efeleri, inciri, zeytini, temiz havası ve birbirinden lezzetli yemekleri ile tanınması gereken illerin başında gelmektedir.</p>
+          <p class="animated bounceInRight" style="animation-delay:3s"><a href="#aydin-yemek">Daha fazla Yemek </a></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/kuşadasijpg.jpg" class="d-block w-100" alt="...">
+        <a href="#aydin-gezilecek"><img src="img/kuşadasijpg.jpg" class="d-block w-100" alt="..."></a>
         <div class="carousel-caption">
-          <h5 class="animated bounceInRight" style="animation-delay:1s">First slide label</h5>
-          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay:2s">Some representative placeholder content for the first slide.</p>
-          <p class="animated bounceInRight" style="animation-delay:3s"><a href="#">Learn More</a></p>
+          <h5 class="animated bounceInRight" style="animation-delay: 1s">Aydın'da Nereler Gezilir ?</h5>
+          <p class="animated bounceInLeft d-none d-md-block" style="animation-delay: 2s">Antik kentler açısından adeta bir cennet olan Aydın’da gezilebilecek yerlerin sayısı da bir o kadar fazladır. Arkada gördüğünüz Kuşadasından bir fotoğraf.</p>
+          <p class="animated bounceInRight" style="animation-delay: 3s"><a href="#aydin-gezilecek">Daha fazla Yer</a></p>
         </div>
       </div>
     </div>
@@ -101,6 +97,124 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+  <div class="about-section bg-light ">
+    <div class="container bg-white py-5">
+      <div id="aydin-head" class="row">
+        <div  class="col-12 col-lg-6">
+          <div class="img-head">
+            <img style="width: 500px; height: 300px;" src="img/aydin.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-12 col-lg-6">
+          <h2 class="text-head">
+            Aydın
+          </h2>
+          <p class="text">Aydın, Türkiye'nin bir ili ve en kalabalık yirminci şehridir. Ege Bölgesi'nde yer alan, turizm ve tarım açısından en gelişmiş illerdendir. Kuzeyinde İzmir, kuzeydoğusunda Manisa, doğusunda Denizli, güneyinde Muğla illeri, batısında Ege Denizi bulunmaktadır. 2022 itibarıyla 1.134.031 kişilik nüfusuyla Ege Bölgesi'nin üçüncü büyük ilidir. 17 ilçesi vardır.</p>
+        </div>
+      </div>
+      <div class="row my-4">
+        <div class="col-12">
+          <h2 id="aydin-tarih">Aydın Tarihçesi</h2>
+          <p>
+            Aydın; çeşitli uygarlıklara ev sahipliği yapmış, Antik Çağda Afrodisias, Milet, Didyma, Nysa, Priene, Magnesia gibi önde gelen kentlerdir. Bugünkü Aydın, Tralleis Kenti ile birlikte MÖ 2500 yılında Hititler zamanında gelişmiş, 8. yüzyılda Lydia zamanında da en parlak çağını yaşamıştır. Selçuklu Hanedanıyla birlikte Türk uygarlığının kültür varlığı ve eserleriyle donatılmıştır.
+            Aydınoğulları zamanında şehrin adı Aydın Güzelhisarı olmuş, daha sonra Aydın adını almıştır. 1811’de İzmir, Saruhan (Manisa), Menteşe (Muğla), Antalya, Isparta sancaklarını kapsayan eyaletin merkezi oldu. Kurtuluş Savaşından sonra 1923 yılında Aydın müstakil vilayet olmuştur.
+          </p>
+        </div>
+        <img  style="width: 600px;" src="img/aydin-kervansaray.png" alt="kervansaray">
+        <figcaption>XIX.Yüzyılda Aydında Bir Kervansaray</figcaption>
+      </div>
+      <div class="row">
+        <div class="col-12 ">
+          <h2 id="aydin-yemek" class="text-head">
+            Aydın Mutfak Kültürü
+          </h2>
+          <p class="text">Ege Bölgesinin güzel şehri Aydın, çoğu zaman yolculuk sırasında geçtiğimiz bir yerdir. Köklü tarihi, efeleri, inciri, zeytini, temiz havası ve birbirinden lezzetli yemekleri ile tanınması gereken illerin başında gelmektedir. Zeytinyağlıları, türlü türlü otlarla yapılan yemekleri ve hafif tatlılarıyla tam anlamıyla Ege mutfağının izlerini taşır. Verimli toprakları ve uygun ikliminden dolayı zengin bir bitki çeşitliliğine sahip olan Aydın’da otların büyük önemi vardır. Ancak Aydın mutfağı bundan çok daha fazlasıdır. Asırlardır birçok medeniyete ev sahipliği yapan bu ilimizin ne kadar zengin bir mutfak kültürüne sahip olduğu tahmin edilebilir. Efsane yemeklerinin yanında kuru incirden yapılan tatlılar, üzüm ve incirden yapılan şaraplar, turunçgil reçelleri Aydın mutfağının önemli lezzetlerindendir.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-lg-6">
+          <h4 class="text-head">
+            Çine Köftesi
+          </h4>
+          <p class="text">Aydın’a özgü has lezzetlerden bir tanesi olan Çine köftesi, Aydın ilinin Çine ilçesine özgü, oldukça lezzetli bir Türk mutfağı yemeğidir. Görsel anlamda İnegöl köftesini andırsa da, malzeme ve yapılış anlamında bariz farklılıklar barındıran Çine köftesi, az ekmek ve bol yağlı bir kıyma ile yapılmaktadır. Çine köftesini diğer köfte çeşitlerinden ayıran en temel fark ise içerisinde tuz harici herhangi bir baharat içermemesidir. Çine Köftesi servis edilirken tercihe bağlı olarak kimyon ile lezzetlendirilebilir. Uluslararası anlamda da oldukça ünlü olan bu köfte çeşidi, turistler tarafından da çok beğenilmekte ve sıklıkla tercih edilmektedir.</p>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="img-head">
+            <img class="img-fluid" style="width: 500px; height: 300px;" src="img/cine-koftesi-1.jpg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-12 col-lg-6">
+          <h4 class="text-head">
+            Keşkek
+          </h4>
+          <p class="text">Birçok yörede farklı şekillerde yapılan ve severek tüketilen keşkek Aydın mutfağında da önemli bir yere sahiptir. Aydın’da özellikle düğünlerde, bayramlarda ve özel günlerde yapılan keşkek tek başına midelerde ziyafet yaşatacak bir lezzete sahiptir. Az malzeme ile dünyanın en güzel yemeklerinden biri haline gelen keşkek buğday, tavuk ya da kuzu etinin eşsiz birleşimi ile oluşur. Üzerine de tereyağı ve kırmızıbiberli sos dökülerek lezzetine lezzet katılır.
+            Sadece Aydın mutfağında değil Türk mutfağında da önemli bir yere sahip olan keşkek, Aydın’da yapılan hali ile bir başkadır. Aydın’a yolunuz düşer ve bir düğüne denk gelirseniz büyük ihtimal bu yemeği denemiş olursunuz.</p>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="img-head">
+            <img class="img-fluid" style="width: 500px; height: 300px;" src="img/keskek.jpg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="row my-4">
+        <div class="col-12">
+          <h2 id="aydin-gezilecek">Aydın'da Gezilecek Yerler</h2>
+          <p>
+            Ege Bölgesi’nde yer alan Aydın, Türkiye’nin en kalabalık yirminci şehridir. Turizm ve tarım alanında ülkemizin en önemli kentlerinden biri sayılan Aydın, tarih boyunca ticaret açısından hep değerli bir noktada olmuştur. M.Ö 13. yüzyıla uzanan tarihi bir geçmişe sahip olan Aydın, günümüze gelene kadar birçok medeniyeti bünyesinde barındırmış ve arkeolojik ve etnografik değerleri ile öne çıkmayı başarmıştır. Antik kentleri, tatil beldeleri, tabiat güzellikleri, milli parkları, plajları, termal tesisleri, yaylaları ve müzeleri ile herkesin kalbini feth eden bir şehrimizdir. 
+          </p>
+        </div>
+        <img class="img-fluid" style="width: 600px;" src="img/akbuk.webp" alt="kervansaray">
+        <figcaption>Akbük, Aydın'ın küçük ve şirin beldelerindendir. </figcaption>
+      </div>
+      <div class="row my-4">
+        <div class="col-12 col-lg-6">
+          <h2 class="text-head">
+            Kuşadası
+          </h2>
+          <p class="text">Burası neresi? Türkiye’nin en büyük üçüncü limanı olma özelliğine sahip olan Kuşadası, aynı zamanda Aydın’ın en önemli turizm merkezlerinden biridir. Yaz aylarında artan nüfusuyla tatilcilerin bir numaralı gözdesi olan Kuşadası’nda, birçok yerleşimin tarih öncesine dayandığına ve günümüze gelene kadar pek çok medeniyetin etkisi altında kaldığını söylemeliyiz. Binlerce yıllık tarihi ve nadir görülen doğal güzelliğinin yanı sıra, plajları, koyları, müzeleri, parkları, mağaraları ve daha birçok olanakları ile Kuşadası olağanüstü bir yerdir.
+  
+            Neden gitmeliyim? Birbirinden farklı aktivitelere katılarak eğlencenin dibini yaşayacağınız Kuşadası’nda; Güvercinada Kalesi, Efes Antik Kenti, Meryem Ana Kilisesi, Kadınlar Plajı, Dilek Yarımadası Milli Parkı, Zeus Mağarası ve daha pek çok yeri gezi listenize eklemelisiniz.</p>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="img-head">
+            <img class="img-fluid" style="width: 500px; height: 300px;" src="img/kusadasi-aydin-scaled.jpg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="row my-4">
+        <div class="col-12 col-lg-6">
+          <h2 class="text-head">
+            Didim
+          </h2>
+          <p class="text">Burası neresi? Menderes Nehri ile Bafa Gölü arasında, bir yarımada üzerinde yer alan Didim, Aydın’ın 98 km güneybatısında konumlanıyor. Batısı ve güneyi Ege denizi ile çevrili olan Didim’in, doğusunda ise Muğla bulunuyor. Aydın’ın en gözde ve en cazip turizm merkezlerinden biri olan Didim, koyları, plajları ve doğal güzelliği ile adeta cennet gibi bir yerdir. Konumu sayesinde de oldukça talep gören Didim, Kuşadası’na yakınlığı ile de sık sık tercih ediliyor.
+            Neden gitmeliyim? Didim’e geldiğinizde; Altınkum Plajı, Apollon Tapınağı, Akbük, Didim Milet Antik Kenti, Akköy, Priene Antik Kenti, Akvaryum Koyu, Bafa Gölü, Cennet Koyu, Martı Koyu, Saplı Ada ve Akademi Koyu gibi daha pek çok yeri ziyaret etmelisiniz.</p>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="img-head">
+            <img class="img-fluid" style="width: 500px; height: 300px;" src="img/didim-aydin-scaled.jpg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="row my-4">
+        <div class="col-12 col-lg-6">
+          <h2 class="text-head">
+            Söke
+          </h2>
+          <p class="text">Burası neresi? Eskiden deniz olan ve Büyük Menderes’in taşıdığı alüvyonlar ile ova haline gelen Söke, Aydın merkeze 48 km uzaklıkta yer alıyor. M.Ö 5 binli yıllara kadar uzanan tarihi geçmişe sahip olan Söke’de, Hititler başta olmak üzere Karialılar, İonialılar, Frigyalılar, Lidyalılar, Persler, Romalılar, Selçuklular ve Osmanlılar hakimiyet kurmuşlardır.
+            Neden gitmeliyim? Bu nedenle tarihi yapıları ile oldukça öne çıkan Söke’ye yolunuz düşerse; Karine Antik Kenti, meşhur Çarşamba Pazarı, Söke Ovası, Kemal Paşa Mahallesi, Magnesia Ad Maeandrum Antik Kenti, Priene Antik Kenti, Didyma Antik Kenti, Milet (Miletos) Antik Kenti ve Myus (Myos) Antik Kenti’ni ziyaret etmelisiniz.</p>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="img-head">
+            <img class="img-fluid" style="width: 500px; height: 300px;" src="img/soke-scaled.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 
   <!-- back to top -->
   <button
