--- a/ilgi-alanlari.html
+++ b/ilgi-alanlari.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="Css/index.css">
+  <link rel="stylesheet" href="Css/ilgi-alanlari.css">
   <link rel="stylesheet" href="Fontawesome/fontawesome/all.css">
   <title>Ana Sayfa</title>
 </head>
@@ -45,7 +46,77 @@
     </nav>
   </header>
   <!-- Navbar end -->
-
+  <div class="center-vertical">
+    <div class="about-us-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+            <div class="img-head"><img src="img/metallica.webp" alt=""></div>
+          </div>
+        <div class="col-12 col-lg-6">
+          <h2 class="text-head">
+            Know more about us
+          </h2>
+          <div class="brak-small mb-2"></div>
+          <p class="text-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia dignissimos nemo ex sequi laudantium inventore ab. Dolorem iure ratione omnis voluptate adipisci velit laudantium voluptatem, provident, optio, quo repudiandae a!</p>
+          <div class="row">
+            <div class="col-12 col-md-4 mb-2 mb-md-0">
+              <div class="box">
+                <i class="fa fa-sers mb-3"></i>
+                <h4 class="mb-0">Total</h4>
+                <p class="mb-0">999</p>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 mb-2 mb-md-0">
+              <div class="box">
+                <i class="fa fa-sers mb-3"></i>
+                <h4 class="mb-0">Total</h4>
+                <p class="mb-0">999</p>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 mb-2 mb-md-0">
+              <div class="box">
+                <i class="fa fa-sers mb-3"></i>
+                <h4 class="mb-0">Total</h4>
+                <p class="mb-0">999</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">        
+        <form action="">
+            <input type="hidden" id='hidden_token'>
+            <div class="col-sm-6 form-group row mt-4 px-0">
+                <label for="Genre" class="form-label col-sm-2">Genre:</label>
+                <select name="" id="select_genre" class="form-control form-control-sm col-sm-10">
+                    <option>Select...</option>                    
+                </select>
+            </div>
+            <div class="col-sm-6 form-group row px-0">
+                <label for="Genre" class="form-label col-sm-2">Playlists:</label>
+                <select name="" id="select_playlist" class="form-control form-control-sm col-sm-10">
+                    <option>Select...</option>                    
+                </select>
+            </div>                  
+            <div class="col-sm-6 row form-group px-0">
+                <button type="submit" id="btn_submit" class="btn btn-success col-sm-12">Search</button>
+            </div>          
+        </form>        
+        <div class="row">
+            <div class="col-sm-6 px-0">
+                <div class="list-group song-list">
+                    
+                </div>                                             
+            </div>
+            <div class="offset-md-1 col-sm-4" id="song-detail">                
+            </div>
+        </div>   
+    </div>
+      </div>
+    </div>
+  </div>
+  
   <!-- back to top -->
   <button
         type="button"
