--- a/ozgecmis.html
+++ b/ozgecmis.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <!-- Navbar start -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark ">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,13 +26,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
             <li class="nav-item ">
-              <a class="nav-link " aria-current="page" href="ozgecmis.html">Özgeçmiş</a>
+              <a class="nav-link active " aria-current="page" href="ozgecmis.html">Özgeçmiş</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  active" href="ilgi-alanlari.html">İlgi Alanları</a>
+              <a class="nav-link  " href="ilgi-alanlari.html">İlgi Alanları</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="sehrim.html">Şehrim</a>
+              <a class="nav-link " href="sehrim.html">Şehrim</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="mirasimiz.html">Mirasımız</a>
