login eklendi php kontrol edilecek

--- a/iletisim.html
+++ b/iletisim.html
@@ -32,14 +32,17 @@
               <a class="nav-link  " href="ilgi-alanlari.html">İlgi Alanları</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="sehrim.html">Şehrim</a>
+              <a class="nav-link" href="sehrim.html">Şehrim</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="mirasimiz.html">Mirasımız</a>
             </li>
             <li class="nav-item">
-               <a class="nav-link" href="iletisim.html">İletişim</a>
+               <a class="nav-link active" href="iletisim.html">İletişim</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link " href="login.html">Giriş Yap</a>
+           </li>
           </ul>
         </div>
       </div>
