--- a/ilgi-alanlari.html
+++ b/ilgi-alanlari.html
@@ -40,6 +40,9 @@
             <li class="nav-item">
                <a class="nav-link" href="iletisim.html">İletişim</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link " href="login.html">Giriş Yap</a>
+           </li>
           </ul>
         </div>
       </div>
