--- a/mirasimiz.html
+++ b/mirasimiz.html
@@ -18,11 +18,10 @@
 <body>
   <header>
     <!-- Navbar start -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark ">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -31,17 +30,20 @@
               <a class="nav-link " aria-current="page" href="ozgecmis.html">Özgeçmiş</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="ilgi-alanlari.html">İlgi Alanları</a>
+              <a class="nav-link  " href="ilgi-alanlari.html">İlgi Alanları</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="sehrim.html">Şehrim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  active" href="mirasimiz.html">Mirasımız</a>
+              <a class="nav-link active" href="mirasimiz.html">Mirasımız</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="iletisim.html">İletişim</a>
+               <a class="nav-link " href="iletisim.html">İletişim</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link " href="login.html">Giriş Yap</a>
+           </li>
           </ul>
         </div>
       </div>
