--- a/sehrim.html
+++ b/sehrim.html
@@ -39,8 +39,11 @@
               <a class="nav-link" href="mirasimiz.html">Mirasımız</a>
             </li>
             <li class="nav-item">
-               <a class="nav-link" href="iletisim.html">İletişim</a>
+               <a class="nav-link " href="iletisim.html">İletişim</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link " href="login.html">Giriş Yap</a>
+           </li>
           </ul>
         </div>
       </div>
