login php tamamlandi footer bara linkler eklendi

--- a/ilgi-alanlari.html
+++ b/ilgi-alanlari.html
@@ -188,19 +188,19 @@
       <div class="text-center text-md-right">
         <ul class="list-unstyled list-inline">
           <li class="list-inline-item">
-            <a href="#" class="btn-floating btn-lg" style="font: size 30px; color:#BF38AC"> <i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://www.instagram.com/meteucaar/" class="btn-floating btn-lg" style="font: size 30px; color:#BF38AC"> <i class="fab fa-instagram"></i></a>
           </li>
           <li class="list-inline-item">
-            <a href="#" class="btn-floating btn-lg " style="font: size 30px; color: #55ACEE;"> <i class="fab fa-twitter"></i></a>
+            <a target="_blank" href="https://twitter.com/meteucaar" class="btn-floating btn-lg " style="font: size 30px; color: #55ACEE;"> <i class="fab fa-twitter"></i></a>
           </li>
           <li class="list-inline-item">
-            <a href="#" class="btn-floating btn-lg text-black" style="font: size 30px;"> <i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://github.com/Metecode" class="btn-floating btn-lg text-black" style="font: size 30px;"> <i class="fab fa-github"></i></a>
           </li>
           <li class="list-inline-item">
-            <a href="#" class="btn-floating btn-lg text-black" style="font: size 30px;"> <i class="fab fa-discord"></i></a>
+            <a target="_blank" href="https://discord.gg/NHzVanhM" class="btn-floating btn-lg text-black" style="font: size 30px;"> <i class="fab fa-discord"></i></a>
           </li>
           <li class="list-inline-item">
-            <a href="#" class="btn-floating btn-lg " style="font: size 30px; color: #0082CA;"> <i class="fab fa-linkedin"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/meteucar/" class="btn-floating btn-lg " style="font: size 30px; color: #0082CA;"> <i class="fab fa-linkedin"></i></a>
           </li>
         </ul>
       </div>
