Metin duzeltmeleri yapildi

--- a/ozgecmis.html
+++ b/ozgecmis.html
@@ -78,7 +78,16 @@
         <figure>
           <img src="img/skillsandtech.jpg" alt="Skills">
         </figure>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius perspiciatis modi velit dolores non tenetur dolore esse, debitis, aut magni vero quidem voluptates nesciunt quos hic molestiae laudantium. Necessitatibus, possimus.</p>
+        <p>
+          <ul>
+           <br> 
+            <li>Teknik mühendislik bilgisi</li>
+            <li>Microsoft office</li>
+            <li>İngilizce</li>
+            <li>Ekip Çalışması</li>
+            <li>Web Tasarımı</li>
+          </ul>
+        </p>
       </section>
         <div class="tab-full">
           <section class="education" id="education">
@@ -113,19 +122,33 @@
 
       <section>
         <h2>Katıldığım Topluluklar</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis aperiam eos nobis maiores rem? Maxime tempore quibusdam illum qui. Sed sapiente tenetur at dolores veniam praesentium sunt vel eum cupiditate.</p>
-        
+        <figure>
+          <img style="height:100px; width:100px" src="img/mavidurak.jpg" alt="Skills">
+        </figure>
+        <br><p>mavidurak-IO  Sosyal Medya Ekibinde Görevli</p>
+      </section>
+      <section>
+        <figure >
+          <img style="height:100px; width:100px;" src="img/otg.jpeg" alt="Skills">
+        </figure>
+        <br><p>SAÜ OTG Üye</p>
+      </section>
+      <section>
+        <figure >
+          <img style="height:100px; width:100px;" src="img/sausiber.png" alt="Skills">
+        </figure>
+        <br><p>SAÜ Siber Üye</p>
       </section>
     </article>
       <aside class="aside-profile">
         <img src="img/pp.png" alt="Mete ucar">
         <p id="author_name">Mete Uçar</p>
         <nav id="social_icons">
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-linkedin"></i>
-          <i class="fab fa-github"></i>
+          <a href="https://www.instagram.com/meteucaar/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/meteucar/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/Metecode" target="_blank" rel="noopener noreferrer"> <i class="fab fa-github"></i> </a> 
         </nav>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dicta ratione, cum dignissimos adipisci, corrupti asperiores, dolore hic eum doloribus sapiente exercitationem officiis enim facere totam architecto. Quaerat, neque dicta?</p> 
+        <p>Okurum, öğrenirim, düşünürüm, kod yazarım ve felsefeyle ilgilenirim.</p> 
       </aside>
       <div class="col-md-6 tab-full">
         <section >
@@ -134,22 +157,22 @@
           <ul class="skill-bars">
             <li>
               <div class="progress percent60"><span>60%</span></div>
-              <strong>Swift</strong>
+              <strong>C#</strong>
             </li>
             <li>
               <div class="progress percent85"><span>85%</span></div>
-              <strong>Firebase</strong>
+              <strong>C++</strong>
             </li>
             <li>
               <div class="progress percent80"><span>80%</span></div>
               <strong>HTML</strong>
             </li>
             <li>
-              <div class="progress percent20"><span>70%</span></div>
+              <div class="progress percent20"><span>20%</span></div>
               <strong>CSS</strong>
             </li>
             <li>
-              <div class="progress percent40"><span>40%</span></div>
+              <div class="progress percent40"><span>45%</span></div>
               <strong>JS</strong>
             </li>
           </ul>
@@ -170,48 +193,12 @@
 <!-- footer -->
 <footer id="footer-color" class="text white pt-5 pb-4 fw-bold">
 <div class="container text-center text-md-left">
-  <div class="row text-center text-md-left">
-    <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-      <h5 class="text-uppercase mb-4 font-weight-bold " style="color:#CAF0F8">Company Name</h5>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut officia ipsa eum voluptates culpa sed quas corrupti numquam excepturi maiores voluptas dignissimos magni blanditiis illum, libero nemo expedita minima facilis.</p>
-
-    </div>
-    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-      <h5 class="text-uppercase mb-4 font-weight-bold " style="color:#CAF0F8">Products</h5>
-      <p>
-        <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-      </p>
-      <p>
-        <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-      </p>
-      <p>
-        <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-      </p>
-      <p>
-        <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-      </p>
-    </div>
-    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-      <h5 class="text-uppercase mb-4 font-weight-bold " style="color:#CAF0F8">Useful Links</h5>
-      <p>
-        <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-      </p>
-      <p>
-        <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-      </p>
-      <p>
-        <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-      </p>
-      <p>
-        <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-      </p>
-    </div>
+  <div class="row text-center text-md-left">  
     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 text-white">
       <h5 class="text-uppercase mb-4 font-weight-bold " style="color:#CAF0F8"> Contact</h5>
       <p><i class="fas fa-home mr-3"></i> Sakarya / Serdivan</p>
-      <p><i class="fas fa-envelope mr-3"></i> i.meteucar@gmail.com</p>
-      <p><i class="fas fa-phone mr-3"></i> 05465830856</p>
-      <p><i class="fas fa-home mr-3"></i> Sakarya / Serdivan</p>
+      <p><a href="mailto:i.meteucar@gmail.com"><i class="fas fa-envelope mr-3"></i> i.meteucar@gmail.com</a></p>
+      <p><a href="tel:+05465830856"> <i class="fas fa-phone mr-3"></i> 05465830856</p></a>
     </div>
   </div>
   <hr class="mb-4">
