--- a/mirasimiz.html
+++ b/mirasimiz.html
@@ -259,59 +259,21 @@
   <!-- footer -->
   <footer id="footer-color" class="text white pt-5 pb-4 fw-bold">
     <div class="container text-center text-md-left">
-      <div class="row text-center text-md-left">
-        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h5 class="text-uppercase mb-4 font-weight-bold " style="color:#CAF0F8">Company Name</h5>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut officia ipsa eum voluptates culpa sed quas
-            corrupti numquam excepturi maiores voluptas dignissimos magni blanditiis illum, libero nemo expedita minima
-            facilis.</p>
-
-        </div>
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h5 class="text-uppercase mb-4 font-weight-bold " style="color:#CAF0F8">Products</h5>
-          <p>
-            <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-          </p>
-          <p>
-            <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-          </p>
-          <p>
-            <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-          </p>
-          <p>
-            <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-          </p>
-        </div>
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h5 class="text-uppercase mb-4 font-weight-bold " style="color:#CAF0F8">Useful Links</h5>
-          <p>
-            <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-          </p>
-          <p>
-            <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-          </p>
-          <p>
-            <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-          </p>
-          <p>
-            <a href="#" class="text-white" style="text-decoration:none">TheProvides</a>
-          </p>
-        </div>
+      <div class="row text-center text-md-left">  
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 text-white">
           <h5 class="text-uppercase mb-4 font-weight-bold " style="color:#CAF0F8"> Contact</h5>
           <p><i class="fas fa-home mr-3"></i> Sakarya / Serdivan</p>
-          <p><i class="fas fa-envelope mr-3"></i> i.meteucar@gmail.com</p>
-          <p><i class="fas fa-phone mr-3"></i> 05465830856</p>
-          <p><i class="fas fa-home mr-3"></i> Sakarya / Serdivan</p>
+          <p><a href="mailto:i.meteucar@gmail.com"><i class="fas fa-envelope mr-3"></i> i.meteucar@gmail.com</a></p>
+          <p><a href="tel:+05465830856"> <i class="fas fa-phone mr-3"></i> 05465830856</p></a>
         </div>
       </div>
       <hr class="mb-4">
       <div class="row align-items-center">
         <div class="col-md-7 col-lg-8">
           <p>Copyright © 2022. All Rights Reserved by:
-            <a href="" style="text-decoration: none;">
-              <strong style="color:#CAF0F8">Mete Uçar</strong></a>
-          </p>
+          <a href="" style="text-decoration: none;">
+          <strong style="color:#CAF0F8">Mete Uçar</strong></a>
+        </p>
         </div>
         <div class="col-md-5 col-lg-4">
           <div class="text-center text-md-right">
@@ -336,7 +298,7 @@
         </div>
       </div>
     </div>
-  </footer>
+    </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
