readme dosyasi duzenlendi webhosta baglandi

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-          <a href="">
+          <a target="_blank" href="https://steamcommunity.com/profiles/76561198393013363">
             <div class="card-flyer">
               <div class="text-box">
                 <div class="image-box">
