--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
               Okurum, öğrenirim, düşünürüm, kod yazarım ve bilimle ilgilenirim. </p>
           </div>
           <div class="separator"></div>
-          <button type="button" class="btn btn-primary btn-lg px-4 ">ÖZGEÇMİŞİMİ İNDİR</button>
+          <a href="img/Kemalpaşa Mah. Medeniyet Cad. No 171A, SerdivanSakarya.png" download="CV"> <button type="button" class="btn btn-primary btn-lg px-4 ">  ÖZGEÇMİŞİMİ İNDİR</button></a>
+          
         </div>
         <div class="col-sm-6">
           <div class="featured-image">
