--- a/login.html
+++ b/login.html
@@ -56,7 +56,7 @@
 	<div class="row my-5">
 		<div class="col-md-4 login-sec">
       <h2 class="text-center">Login Now</h2>
-      <form class="login-form" action="../php/admin.php" method="POST" onsubmit="return validateform()">
+      <form class="login-form" action="Php/login.php" method="POST" onsubmit="return validateform()">
   <div class="form-group">
     <label for="exampleInputEmail1" class="text-uppercase">Username</label>
     <input type="text" name="name" class="form-control" placeholder="Email" required>
@@ -76,7 +76,7 @@
   </div>
 </form>
 
-<small>Email 1@a.com , şifre 123456</small>
+<small>Email G201210051@sakarya.edu.tr , şifre G201210051</small>
 		</div>
 		<div class="col-md-8 banner-sec">     
 	</div>
