--- a/ozgecmis.html
+++ b/ozgecmis.html
@@ -76,17 +76,10 @@
       <section >
         <h2>Yetenekler</h2>
         <figure>
-          <img src="img/skillsandtech.jpg" alt="Skills">
+          <img class="img-fluid" src="img/skillsandtech.jpg" alt="Skills">
         </figure>
         <p>
-          <ul>
-           <br> 
-            <li>Teknik mühendislik bilgisi</li>
-            <li>Microsoft office</li>
-            <li>İngilizce</li>
-            <li>Ekip Çalışması</li>
-            <li>Web Tasarımı</li>
-          </ul>
+            Teknik mühendislik bilgisi,Microsoft office,İngilizce,Ekip Çalışması,Web Tasarımı
         </p>
       </section>
         <div class="tab-full">
