imglerde bug fixlendi

--- a/ilgi-alanlari.html
+++ b/ilgi-alanlari.html
@@ -52,8 +52,8 @@
   <div class="center-vertical">
     <div class="about-us-section">
       <div class="container">
-        <div class="row">
-          <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+        <div class="row pt-3">
+          <div class="col-12 col-lg-6 mb-4 mb-lg-0 ">
             <div class="img-head"><img src="img/metallica.webp" alt=""></div>
           </div>
         <div class="col-12 col-lg-6">
