--- a/sehrim.html
+++ b/sehrim.html
@@ -106,7 +106,7 @@
       <div id="aydin-head" class="row">
         <div  class="col-12 col-lg-6">
           <div class="img-head">
-            <img style="width: 500px; height: 300px;" src="img/aydin.jpg" alt="">
+            <img class="img-fluid" style="width: 500px; height: 300px;" src="img/aydin.jpg" alt="">
           </div>
         </div>
         <div class="col-12 col-lg-6">
